--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/multi_board?serverTimezone=Asia/Seoul
+    url: jdbc:mysql://localhost:3306/study_board?serverTimezone=Asia/Seoul
     username: root
     password: 1234
 
