--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/study_board?serverTimezone=Asia/Seoul
     username: root
-    password: 1234
+    password: root
 
   sql:
     init:
